添加黄晶剑

--- a/src/main/resources/assets/simplertemplatemod/lang/en_us.json
+++ b/src/main/resources/assets/simplertemplatemod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.simplertemplatemod.citrine": "Citrine",
   "item.simplertemplatemod.raw_citrine": "Raw Citrine",
+  "item.simplertemplatemod.citrine_sword": "Citrine Sword",
   "itemgroup.simplertemplatemod.citrine": "Citrine",
   "block.simplertemplatemod.citrine_block": "Citrine Block",
   "block.simplertemplatemod.citrine_ore": "Citrine Ore",
