重新修改了ModItems的配置但是无法添加方块 一旦加了方块就崩溃

--- a/src/main/resources/assets/simplertemplatemod/lang/en_us.json
+++ b/src/main/resources/assets/simplertemplatemod/lang/en_us.json
@@ -2,8 +2,11 @@
   "item.simplertemplatemod.citrine": "Citrine",
   "item.simplertemplatemod.raw_citrine": "Raw Citrine",
   "item.simplertemplatemod.citrine_sword": "Citrine Sword",
-  "itemgroup.simplertemplatemod.citrine": "Citrine",
+  "item.simplertemplatemod.mega_phone": "Mega Phone",
+  "itemgroup.simplertemplatemod.citrine": "Citrine Group",
+
   "block.simplertemplatemod.citrine_block": "Citrine Block",
   "block.simplertemplatemod.citrine_ore": "Citrine Ore",
   "block.simplertemplatemod.deepslate_citrine_ore": "Deepslate Citrine Ore"
+
 }
