添加食物布丁

--- a/src/main/resources/assets/simplertemplatemod/lang/en_us.json
+++ b/src/main/resources/assets/simplertemplatemod/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.simplertemplatemod.raw_citrine": "Raw Citrine",
   "item.simplertemplatemod.citrine_sword": "Citrine Sword",
   "item.simplertemplatemod.mega_phone": "Mega Phone",
+  "item.simplertemplatemod.pudding": "Pudding",
   "itemgroup.simplertemplatemod.citrine": "Citrine Group",
 
   "block.simplertemplatemod.citrine_block": "Citrine Block",
