--- a/src/main/resources/assets/simplertemplatemod/lang/en_us.json
+++ b/src/main/resources/assets/simplertemplatemod/lang/en_us.json
@@ -2,6 +2,10 @@
   "item.simplertemplatemod.citrine": "Citrine",
   "item.simplertemplatemod.raw_citrine": "Raw Citrine",
   "item.simplertemplatemod.citrine_sword": "Citrine Sword",
+  "item.simplertemplatemod.citrine_pickaxe": "Citrine Pickaxe",
+  "item.simplertemplatemod.citrine_axe": "Citrine Axe",
+  "item.simplertemplatemod.citrine_shovel": "Citrine Hoe",
+  "item.simplertemplatemod.citrine_hoe": "Citrine Shovel",
   "item.simplertemplatemod.mega_phone": "Mega Phone",
   "item.simplertemplatemod.pudding": "Pudding",
   "itemgroup.simplertemplatemod.citrine": "Citrine Group",
