添加sun和rain指令

--- a/src/main/resources/assets/simplertemplatemod/lang/en_us.json
+++ b/src/main/resources/assets/simplertemplatemod/lang/en_us.json
@@ -8,6 +8,7 @@
   "item.simplertemplatemod.citrine_hoe": "Citrine Shovel",
   "item.simplertemplatemod.mega_phone": "Mega Phone",
   "item.simplertemplatemod.pudding": "Pudding",
+  "item.simplertemplatemod.music_disc_color": "Music Color",
   "itemgroup.simplertemplatemod.citrine": "Citrine Group",
 
   "block.simplertemplatemod.citrine_block": "Citrine Block",
