添加新唱片

--- a/src/main/resources/assets/simplertemplatemod/lang/zh_cn.json
+++ b/src/main/resources/assets/simplertemplatemod/lang/zh_cn.json
@@ -10,6 +10,7 @@
   "item.simplertemplatemod.citrine_sword": "黄晶剑",
   "item.simplertemplatemod.mega_phone": "麦克风",
   "item.simplertemplatemod.music_disc_color": "Color唱片",
+  "item.simplertemplatemod.music_disc_congratulations": "恭喜发财唱片",
   "item.simplertemplatemod.pudding": "布丁",
   "item.simplertemplatemod.raw_citrine": "粗黄晶",
   "itemgroup.simplertemplatemod.citrine": "黄晶"
