--- a/src/main/resources/assets/simplertemplatemod/lang/en_us.json
+++ b/src/main/resources/assets/simplertemplatemod/lang/en_us.json
@@ -9,6 +9,7 @@
   "item.simplertemplatemod.mega_phone": "Mega Phone",
   "item.simplertemplatemod.pudding": "Pudding",
   "item.simplertemplatemod.music_disc_color": "Music Color",
+  "item.simplertemplatemod.music_disc_congratulations": "Music Congratulations And Prosperity",
   "itemgroup.simplertemplatemod.citrine": "Citrine Group",
 
   "block.simplertemplatemod.citrine_block": "Citrine Block",
