移除了唱片的临时合成表 添加了唱片的生成

--- a/src/main/resources/assets/simplertemplatemod/lang/zh_cn.json
+++ b/src/main/resources/assets/simplertemplatemod/lang/zh_cn.json
@@ -68,9 +68,9 @@
   "item.simplertemplatemod.music_disc_tuesday_is_kiss_day.desc": "火曜日はチューデイ - another-story-HoneyWorks、雨宮天",
   "subtitles.simplertemplatemod.tuesday_is_kiss_day": "火曜日はチューデイ - another-story-HoneyWorks、雨宮天",
 
-  "item.simplertemplatemod.music_disc_tokyo_weather_meeting": "東京ウインターセッション",
-  "item.simplertemplatemod.music_disc_tokyo_weather_meeting.desc": "東京ウインターセッション - HoneyWorks、神谷浩史、戸松遥、梶裕貴、阿澄佳奈、鈴村健一、豊崎愛生",
-  "subtitles.simplertemplatemod.tokyo_weather_meeting": "東京ウインターセッション - HoneyWorks、神谷浩史、戸松遥、梶裕貴、阿澄佳奈、鈴村健一、豊崎愛生",
+  "item.simplertemplatemod.music_disc_tokyo_winter_meeting": "東京ウインターセッション",
+  "item.simplertemplatemod.music_disc_tokyo_winter_meeting.desc": "東京ウインターセッション - HoneyWorks、神谷浩史、戸松遥、梶裕貴、阿澄佳奈、鈴村健一、豊崎愛生",
+  "subtitles.simplertemplatemod.tokyo_winter_meeting": "東京ウインターセッション - HoneyWorks、神谷浩史、戸松遥、梶裕貴、阿澄佳奈、鈴村健一、豊崎愛生",
 
   "item.simplertemplatemod.music_disc_bambo_disco": "バンブーディスコ",
   "item.simplertemplatemod.music_disc_bambo_disco.desc": "バンブーディスコ - Yunomi-TORIENA",
