--- a/src/main/resources/assets/simplertemplatemod/lang/en_us.json
+++ b/src/main/resources/assets/simplertemplatemod/lang/en_us.json
@@ -69,14 +69,15 @@
   "item.simplertemplatemod.music_disc_tuesday_is_kiss_day.desc": "火曜日はチューデイ - another-story-HoneyWorks、雨宮天",
   "subtitles.simplertemplatemod.tuesday_is_kiss_day": "火曜日はチューデイ - another-story-HoneyWorks、雨宮天",
 
-  "item.simplertemplatemod.music_disc_tokyo_weather_meeting": "東京ウインターセッション",
-  "item.simplertemplatemod.music_disc_tokyo_weather_meeting.desc": "東京ウインターセッション - HoneyWorks、神谷浩史、戸松遥、梶裕貴、阿澄佳奈、鈴村健一、豊崎愛生",
-  "subtitles.simplertemplatemod.tokyo_weather_meeting": "東京ウインターセッション - HoneyWorks、神谷浩史、戸松遥、梶裕貴、阿澄佳奈、鈴村健一、豊崎愛生",
+  "item.simplertemplatemod.music_disc_tokyo_winter_meeting": "東京ウインターセッション",
+  "item.simplertemplatemod.music_disc_tokyo_winter_meeting.desc": "東京ウインターセッション - HoneyWorks、神谷浩史、戸松遥、梶裕貴、阿澄佳奈、鈴村健一、豊崎愛生",
+  "subtitles.simplertemplatemod.tokyo_winter_meeting": "東京ウインターセッション - HoneyWorks、神谷浩史、戸松遥、梶裕貴、阿澄佳奈、鈴村健一、豊崎愛生",
 
   "item.simplertemplatemod.music_disc_bambo_disco": "バンブーディスコ",
   "item.simplertemplatemod.music_disc_bambo_disco.desc": "バンブーディスコ - Yunomi-TORIENA",
   "subtitles.simplertemplatemod.bambo_disco": "バンブーディスコ - Yunomi-TORIENA,",
 
+  "itemgroup.simplertemplatemod.citrine": "Citrine Group",
   "itemgroup.simplertemplatemod.citrine_items": "Citrine Group",
   "itemgroup.simplertemplatemod.music_discs": "Music Discs Group"
 
