--- a/src/main/resources/assets/simplertemplatemod/lang/en_us.json
+++ b/src/main/resources/assets/simplertemplatemod/lang/en_us.json
@@ -97,5 +97,14 @@
   "command.simplertemplatemod.explain_day":"/day -> Set up daytime",
   "command.simplertemplatemod.explain_night":"/night -> Set the night",
   "command.simplertemplatemod.explain_sun":"/sun -> Set up sunny day",
-  "command.simplertemplatemod.explain_rain":"/rain -> Set up rain day"
+  "command.simplertemplatemod.explain_rain":"/rain -> Set up rain day",
+
+  "command.tpaccept.success": "The transmission was successful",
+  "command.tpaccept.error": "An error occurred during transmission",
+  "command.tpaccept.player_not_found": "The player could not be found",
+  "command.tpaccept.no_request":"no request",
+
+  "command.tpa.success": "Delivery request has been sent",
+  "command.tpa.inquire": "A transmission request has been made to you",
+  "command.tpa.error_n1": "You can't send yourself a request!!!"
 }
