添加依赖 新增配置文件 小修改

--- a/src/main/resources/assets/easycommand/lang/zh_cn.json
+++ b/src/main/resources/assets/easycommand/lang/zh_cn.json
@@ -106,5 +106,7 @@
   "command.tpaccept.success": "传送成功",
   "command.tpaccept.error": "传送时出错",
   "command.tpaccept.player_not_found": "找不到这名玩家",
-  "command.tpaccept.no_request": "无请求"
+  "command.tpaccept.no_request": "无请求",
+
+  "command.easycommand.radius": "超过最大限制范围"
 }
